// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animations: codegen should codegen correct contents - css 1`] = `
"
--- Homepage.tsx ---

    // This is a skeleton starter React component generated by Plasmic.
    // This file is owned by you, feel free to edit as you see fit.
    import * as React from "react";
    import {PlasmicHomepage, DefaultHomepageProps} from "./PlasmicHomepage";  // plasmic-import: 9nMSLQ9-J_qp/render
    import {HTMLElementRefOf} from "@plasmicapp/react-web";

    

    

    // Your component props start with props for variants and slots you defined
    // in Plasmic, but you can add more here, like event handlers that you can
    // attach to named nodes in your component.
    //
    // If you don't want to expose certain variants or slots as a prop, you can use
    // Omit to hide them:
    //
    // interface HomepageProps extends Omit<DefaultHomepageProps, "hideProps1"|"hideProp2"> {
    //   // etc.
    // }
    //
    // You can also stop extending from DefaultHomepageProps altogether and have
    // total control over the props for your component.
    export interface HomepageProps extends DefaultHomepageProps {
    }

    
      function Homepage_(props: HomepageProps, ref: HTMLElementRefOf<"div">) {
        
    // Use PlasmicHomepage to render this component as it was
    // designed in Plasmic, by activating the appropriate variants,
    // attaching the appropriate event handlers, etc.  You
    // can also install whatever React hooks you need here to manage state or
    // fetch data.
    //
    // Props you can pass into PlasmicHomepage are:
    // 1. Variants you want to activate,
    // 2. Contents for slots you want to fill,
    // 3. Overrides for any named node in the component to attach behavior and data,
    // 4. Props to set on the root node.
    //
    // By default, we are just piping all HomepageProps here, but feel free
    // to do whatever works for you.
  
        return <PlasmicHomepage root={{ref}} {...props} />;
      }

      const Homepage = React.forwardRef(Homepage_);
      export default Homepage;
    
  
--- PlasmicHomepage.css ---
 .Homepage__root__wN3Do {
          display: grid;
position: relative;
width: 100%;
height: 100%;
align-content: flex-start;
justify-items: center;
min-width: 0;
min-height: 0;
grid-template-columns: var(--plsmc-viewport-gap) 1fr minmax(0, var(--plsmc-wide-chunk)) min(var(--plsmc-standard-width), calc(100% - var(--plsmc-viewport-gap) - var(--plsmc-viewport-gap))) minmax(0, var(--plsmc-wide-chunk)) 1fr var(--plsmc-viewport-gap) ;
padding: 0px;  
      } 
 .Homepage__root__wN3Do > * {
        grid-column: 4
      } 
 .Homepage__h1__dplmm {
          animation: var(--anim-ywA_Rc-HaFh2) 1s ease 0s 1 normal none running;
width: 100%;
height: auto;
max-width: 100%;
margin-bottom: 0px;
min-width: 0;  
      } 
 .Homepage__h1__cidRc {
          animation: var(--anim-K8aS4cD8LxJC) 1s ease 0s 1 normal none running;
width: 100%;
height: auto;
max-width: 100%;
padding-top: 0px;
min-width: 0;  
      } 
--- PlasmicHomepage.tsx ---

/* eslint-disable */
/* tslint:disable */
// @ts-nocheck
/* prettier-ignore-start */

/** @jsxRuntime classic */
/** @jsx createPlasmicElementProxy */
/** @jsxFrag React.Fragment */

// This class is auto-generated by Plasmic; please do not edit!
// Plasmic Project: 1234567890
// Component: 9nMSLQ9-J_qp
// plasmic-unformatted



import * as React from "react";


import {
  Flex as Flex__,
  MultiChoiceArg,
  PlasmicDataSourceContextProvider as PlasmicDataSourceContextProvider__,
  PlasmicIcon as PlasmicIcon__,
  PlasmicImg as PlasmicImg__,
  PlasmicLink as PlasmicLink__,
  PlasmicPageGuard as PlasmicPageGuard__,
  SingleBooleanChoiceArg,
  SingleChoiceArg,
  Stack as Stack__,
  StrictProps,
  Trans as Trans__,
  classNames,
  createPlasmicElementProxy,
  deriveRenderOpts,
  ensureGlobalVariants,
  generateOnMutateForSpec,
  generateStateOnChangeProp,
  generateStateOnChangePropForCodeComponents,
  generateStateValueProp,
  get as $stateGet,
  hasVariant,
  initializeCodeComponentStates,
  initializePlasmicStates,
  makeFragment,
  omit,
  pick,
  renderPlasmicSlot,
  set as $stateSet,
  useCurrentUser,
  useDollarState,
  usePlasmicTranslator,
  useTrigger,
  wrapWithClassName,
  
} from  "@plasmicapp/react-web";
import {
  
  DataCtxReader as DataCtxReader__,
  useDataEnv,
  useGlobalActions,
  
} from "@plasmicapp/react-web/lib/host";










import { _useGlobalVariants } from "./plasmic.tsx"; // plasmic-import: 1234567890/projectModule
import { _useStyleTokens } from "./PlasmicStyleTokensProvider.tsx"; // plasmic-import: 1234567890/styleTokensProvider

    import "@plasmicapp/react-web/lib/plasmic.css";
    import "./plasmic__default_style.css"; // plasmic-import: global/defaultcss
    
    import "./plasmic.css"; // plasmic-import: 1234567890/projectcss
    import  "./PlasmicHomepage.css" // plasmic-import: 9nMSLQ9-J_qp/css
  





const emptyProxy: any = new Proxy(() => "", {
  get(_, prop) {
    return prop === Symbol.toPrimitive ? () => "" : emptyProxy;
  },
});

function wrapQueriesWithLoadingProxy($q: any): any {
  return new Proxy($q, {
    get(target, queryName) {
      const query = target[queryName];
      return !query || query.isLoading || !query.data ? emptyProxy : query;
    },
  });
}


export type PageCtx = {
  pageRoute: string;
  pagePath: string;
  params: Record<string, string | string[] | undefined>;
  query: Record<string, string | string[] | undefined>;
};

export function generateDynamicMetadata($q: any, $ctx: PageCtx) {
  return {
    
    
    openGraph: {
      
      
      
    },
    twitter: {
      card: "summary" as const,
      
      
      
    },
    
  };
}

createPlasmicElementProxy





    export type PlasmicHomepage__VariantMembers = {
      
    };
    export type PlasmicHomepage__VariantsArgs = {};
    type VariantPropType = keyof PlasmicHomepage__VariantsArgs;
    export const PlasmicHomepage__VariantProps = new Array<VariantPropType>();
  


export type PlasmicHomepage__ArgsType = {};
type ArgPropType = keyof PlasmicHomepage__ArgsType;
export const PlasmicHomepage__ArgProps = new Array<ArgPropType>();


export type PlasmicHomepage__OverridesType = {
    root?: Flex__<"div">;
  };


    export interface DefaultHomepageProps {
      
      className?: string;
  }





const $$ = {};










    function PlasmicHomepage__RenderFunc(
      props: {
        variants: PlasmicHomepage__VariantsArgs,
        args: PlasmicHomepage__ArgsType,
        overrides: PlasmicHomepage__OverridesType,
        forNode?: string
      }
    ) {
      
      
      const {variants, overrides, forNode } = props;

      

      const args = React.useMemo(() => Object.assign({
    
  }, Object.fromEntries(
          Object.entries(props.args).filter(([_, v]) => v !== undefined)
        )),
        [props.args]
      );

      
    const $props = {
      ...args,
      ...variants,
    };

    
    
    const $ctx = useDataEnv?.() || {};
    const refsRef = React.useRef({});
    const $refs = refsRef.current;

    

    

    

    

    
    
    
    

    

    
    

    
    const styleTokensClassNames = _useStyleTokens();
    
  
      return (
        <React.Fragment>
  

      <div className={"plasmic_page_wrapper"}>
        <div
      data-plasmic-name={"root"}
      data-plasmic-override={overrides.root}
      data-plasmic-root={true}
      data-plasmic-for-node={forNode}
      className={classNames("plasmic_default__all", "root_reset_1234567890", "plasmic_default_styles", "plasmic_mixins", styleTokensClassNames, "Homepage__root__wN3Do")}
      
      >
            <h1
      
      
      
      
      className={classNames("plasmic_default__all", "plasmic_default__h1", "plasmic_default__h1__12345", "__wab_text", "Homepage__h1__dplmm")}
      
      >
            { "This project animation" }
          </h1>
<h1
      
      
      
      
      className={classNames("plasmic_default__all", "plasmic_default__h1", "plasmic_default__h1__12345", "__wab_text", "Homepage__h1__cidRc")}
      
      >
            { "Imported project animation" }
          </h1>
          </div>
      </div>
    
</React.Fragment>
      ) as React.ReactElement | null;
    }




    const PlasmicDescendants = {
    root: ["root"],
  } as const;
    type NodeNameType = keyof typeof PlasmicDescendants;
    type DescendantsType<T extends NodeNameType> = (typeof PlasmicDescendants)[T][number];
    type NodeDefaultElementType = {
      root: "div"
    };
  


    type ReservedPropsType = "variants" | "args" | "overrides";
    type NodeOverridesType<T extends NodeNameType> = Pick<PlasmicHomepage__OverridesType, DescendantsType<T>>;
    type NodeComponentProps<T extends NodeNameType> = (
      // Explicitly specify variants, args, and overrides as objects
      & {
        variants?: PlasmicHomepage__VariantsArgs;
        args?: PlasmicHomepage__ArgsType;
        overrides?: NodeOverridesType<T>;
      }
      // Specify variants directly as props
      & Omit<PlasmicHomepage__VariantsArgs, ReservedPropsType>
      // Specify args directly as props
      & Omit<PlasmicHomepage__ArgsType, ReservedPropsType>
      // Specify overrides for each element directly as props
      & Omit<NodeOverridesType<T>, ReservedPropsType | VariantPropType | ArgPropType>
      // Specify props for the root element
      & Omit<Partial<React.ComponentProps<NodeDefaultElementType[T]>>, ReservedPropsType | VariantPropType | ArgPropType | DescendantsType<T>>
    );
    function makeNodeComponent<NodeName extends NodeNameType>(nodeName: NodeName) {
      type PropsType = NodeComponentProps<NodeName> & {key?: React.Key};
      const func = function<T extends PropsType>(props: T & StrictProps<T, PropsType>) {
        const {variants, args, overrides} = React.useMemo(() => deriveRenderOpts(props, {
          name: nodeName,
          descendantNames: PlasmicDescendants[nodeName],
          internalArgPropNames: PlasmicHomepage__ArgProps,
          internalVariantPropNames: PlasmicHomepage__VariantProps,
        }), [props, nodeName]);
        return PlasmicHomepage__RenderFunc({ variants, args, overrides, forNode: nodeName });
      };
      if (nodeName === "root") {
        func.displayName = "PlasmicHomepage";
      } else {
        func.displayName = \`PlasmicHomepage.\${nodeName}\`;
      }
      return func;
    }

    
    

    export const PlasmicHomepage = Object.assign(
      // Top-level PlasmicHomepage renders the root element
      makeNodeComponent("root"),
      {
        // Helper components rendering sub-elements
        

        // Metadata about props expected for PlasmicHomepage
        internalVariantProps: PlasmicHomepage__VariantProps,
        internalArgProps: PlasmicHomepage__ArgProps,

        

        

        

        
    pageMetadata: generateDynamicMetadata(
      wrapQueriesWithLoadingProxy({}),
      { pageRoute: "/", pagePath: "/", params: {}, query: {} }
    )
  
      }
    );
  



export default PlasmicHomepage;
/* prettier-ignore-end */

--- PlasmicStyleTokensProvider.tsx ---

    /* eslint-disable */
    /* tslint:disable */
    // @ts-nocheck

    // This code is auto-generated by Plasmic; please do not edit!
    // Plasmic Project: 1234567890
    // plasmic-unformatted
  
    import { createUseStyleTokens } from "@plasmicapp/react-web";

    import { _useGlobalVariants } from "./plasmic.tsx"; // plasmic-import: 1234567890/projectModule

    import "./plasmic.css"; // plasmic-import: 1234567890/projectcss

    const data = {
    base: \`\${"plasmic_tokens_1234567890"}\`,
    varianted: [
    
  ],
  };
  
    export const _useStyleTokens = createUseStyleTokens(
      data,
      _useGlobalVariants,
    );
  
    
--- global.d.ts ---
declare module '*.css' {
  const classes: { readonly [key: string]: string }
  export default classes
}
declare module '*.module.css' {
  const classes: { readonly [key: string]: string }
  export default classes
}
--- plasmic.css ---

      @import "../plasmic_kit_animations/plasmic.css"; /* plasmic-import: axVArpcqgHCPMKB2yUGsW3/projectcss */
      @import url('https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&display=swap');
      
      
      
  .plasmic_tokens_1234567890 {
    --plsmc-standard-width: 800px;
    --plsmc-wide-width: 1280px;
    --plsmc-viewport-gap: 16px;
    --plsmc-wide-chunk: calc(((var(--plsmc-wide-width) - var(--plsmc-standard-width)) / 2) - var(--plsmc-viewport-gap));
  }
    
      
        
        .plasmic_default_styles {
          --mixin-Gu10NrJLTV7X_font-family: "Inter", sans-serif; --mixin-Gu10NrJLTV7X_font-size: 16px; --mixin-Gu10NrJLTV7X_font-weight: 400; --mixin-Gu10NrJLTV7X_font-style: normal; --mixin-Gu10NrJLTV7X_text-align: left; --mixin-Gu10NrJLTV7X_text-transform: none; --mixin-Gu10NrJLTV7X_line-height: 1.5; --mixin-Gu10NrJLTV7X_letter-spacing: normal; --mixin-Gu10NrJLTV7X_white-space: pre-wrap; --mixin-Gu10NrJLTV7X_user-select: text; --mixin-Gu10NrJLTV7X_text-decoration-line: none; --mixin-Gu10NrJLTV7X_text-overflow: clip; --mixin-Gu10NrJLTV7X_color: #000000; --mixin-kNGr7RGBirOX_font-weight: 700; --mixin-kNGr7RGBirOX_font-size: 64px; --mixin-kNGr7RGBirOX_line-height: 1; --mixin-kNGr7RGBirOX_letter-spacing: -1px; --mixin-kNGr7RGBirOX_white-space: pre-wrap; --mixin-gsONY1VgdHtd_font-size: 48px; --mixin-gsONY1VgdHtd_font-weight: 700; --mixin-gsONY1VgdHtd_letter-spacing: -0.5px; --mixin-gsONY1VgdHtd_line-height: 1.1; --mixin-gsONY1VgdHtd_white-space: pre-wrap; --mixin-RkTSTMvmHEfC_color: #0070f3; --mixin-RkTSTMvmHEfC_white-space: pre-wrap; --mixin-VN3kmEgW1Hmx_font-size: 32px; --mixin-VN3kmEgW1Hmx_font-weight: 600; --mixin-VN3kmEgW1Hmx_line-height: 1.2; --mixin-VN3kmEgW1Hmx_white-space: pre-wrap; --mixin-hStfBTnI-Abp_font-size: 24px; --mixin-hStfBTnI-Abp_font-weight: 600; --mixin-hStfBTnI-Abp_line-height: 1.3; --mixin-hStfBTnI-Abp_white-space: pre-wrap; --mixin-A0Cduqt47XHb_background: linear-gradient(#f8f8f8, #f8f8f8); --mixin-A0Cduqt47XHb_border-bottom-color: #dddddd; --mixin-A0Cduqt47XHb_border-bottom-style: solid; --mixin-A0Cduqt47XHb_border-bottom-width: 1px; --mixin-A0Cduqt47XHb_border-left-color: #dddddd; --mixin-A0Cduqt47XHb_border-left-style: solid; --mixin-A0Cduqt47XHb_border-left-width: 1px; --mixin-A0Cduqt47XHb_border-right-color: #dddddd; --mixin-A0Cduqt47XHb_border-right-style: solid; --mixin-A0Cduqt47XHb_border-right-width: 1px; --mixin-A0Cduqt47XHb_border-top-color: #dddddd; --mixin-A0Cduqt47XHb_border-top-style: solid; --mixin-A0Cduqt47XHb_border-top-width: 1px; --mixin-A0Cduqt47XHb_border-bottom-left-radius: 3px; --mixin-A0Cduqt47XHb_border-bottom-right-radius: 3px; --mixin-A0Cduqt47XHb_border-top-left-radius: 3px; --mixin-A0Cduqt47XHb_border-top-right-radius: 3px; --mixin-A0Cduqt47XHb_font-family: "Inconsolata"; --mixin-A0Cduqt47XHb_padding-bottom: 1px; --mixin-A0Cduqt47XHb_padding-left: 4px; --mixin-A0Cduqt47XHb_padding-right: 4px; --mixin-A0Cduqt47XHb_padding-top: 1px; --mixin-A0Cduqt47XHb_white-space: pre-wrap; --mixin-OOm15b_NDUlm_border-left-color: #dddddd; --mixin-OOm15b_NDUlm_border-left-style: solid; --mixin-OOm15b_NDUlm_border-left-width: 3px; --mixin-OOm15b_NDUlm_color: #888888; --mixin-OOm15b_NDUlm_padding-left: 10px; --mixin-OOm15b_NDUlm_white-space: pre-wrap; --mixin-BdGd0LDmfoRs_background: linear-gradient(#f8f8f8, #f8f8f8); --mixin-BdGd0LDmfoRs_border-bottom-color: #dddddd; --mixin-BdGd0LDmfoRs_border-bottom-style: solid; --mixin-BdGd0LDmfoRs_border-bottom-width: 1px; --mixin-BdGd0LDmfoRs_border-left-color: #dddddd; --mixin-BdGd0LDmfoRs_border-left-style: solid; --mixin-BdGd0LDmfoRs_border-left-width: 1px; --mixin-BdGd0LDmfoRs_border-right-color: #dddddd; --mixin-BdGd0LDmfoRs_border-right-style: solid; --mixin-BdGd0LDmfoRs_border-right-width: 1px; --mixin-BdGd0LDmfoRs_border-top-color: #dddddd; --mixin-BdGd0LDmfoRs_border-top-style: solid; --mixin-BdGd0LDmfoRs_border-top-width: 1px; --mixin-BdGd0LDmfoRs_border-bottom-left-radius: 3px; --mixin-BdGd0LDmfoRs_border-bottom-right-radius: 3px; --mixin-BdGd0LDmfoRs_border-top-left-radius: 3px; --mixin-BdGd0LDmfoRs_border-top-right-radius: 3px; --mixin-BdGd0LDmfoRs_font-family: "Inconsolata"; --mixin-BdGd0LDmfoRs_padding-bottom: 3px; --mixin-BdGd0LDmfoRs_padding-left: 6px; --mixin-BdGd0LDmfoRs_padding-right: 6px; --mixin-BdGd0LDmfoRs_padding-top: 3px; --mixin-BdGd0LDmfoRs_white-space: pre-wrap; --mixin-n6mU-ZjsBfMK_display: flex; --mixin-n6mU-ZjsBfMK_flex-direction: column; --mixin-n6mU-ZjsBfMK_align-items: stretch; --mixin-n6mU-ZjsBfMK_justify-content: flex-start; --mixin-n6mU-ZjsBfMK_list-style-position: outside; --mixin-n6mU-ZjsBfMK_padding-left: 40px; --mixin-n6mU-ZjsBfMK_position: relative; --mixin-n6mU-ZjsBfMK_list-style-type: disc; --mixin-n6mU-ZjsBfMK_white-space: pre-wrap; --mixin-BS38Q2flWmMg_display: flex; --mixin-BS38Q2flWmMg_flex-direction: column; --mixin-BS38Q2flWmMg_align-items: stretch; --mixin-BS38Q2flWmMg_justify-content: flex-start; --mixin-BS38Q2flWmMg_list-style-position: outside; --mixin-BS38Q2flWmMg_padding-left: 40px; --mixin-BS38Q2flWmMg_position: relative; --mixin-BS38Q2flWmMg_list-style-type: decimal; --mixin-BS38Q2flWmMg_white-space: pre-wrap; --mixin-fDS1c4q_H8wY_font-size: 20px; --mixin-fDS1c4q_H8wY_font-weight: 600; --mixin-fDS1c4q_H8wY_line-height: 1.5; --mixin-fDS1c4q_H8wY_white-space: pre-wrap; --mixin-x7ipGuQGGI-a_font-size: 16px; --mixin-x7ipGuQGGI-a_font-weight: 600; --mixin-x7ipGuQGGI-a_line-height: 1.5; --mixin-x7ipGuQGGI-a_white-space: pre-wrap; --mixin-sVFbIfzzgDVY_color: #3291ff; --mixin-sVFbIfzzgDVY_white-space: pre-wrap; --mixin-mqSsrWeDcbM__white-space: pre-wrap; --mixin-LfWUg1b7ppIg_white-space: pre-wrap
        }
        
      
      .plasmic_default_styles {
--anim-ywA_Rc-HaFh2: bounce-ywA_Rc-HaFh2;
--plasmic-anim-bounce: var(--anim-ywA_Rc-HaFh2);
}
      @keyframes bounce-ywA_Rc-HaFh2 {
  0% {
  transform: translate3d(0px, 0px, 0);  
  }
  20% {
  transform: translate3d(0px, 0px, 0);  
  }
  40% {
  transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
  }
  43% {
  transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
  }
  53% {
  transform: translate3d(0px, 0px, 0);  
  }
  70% {
  transform: translate3d(0, -15px, 0) scale3d(1, 1.05, 1);  
  }
  80% {
  transform: translate3d(0px, 0px, 0) scale3d(1, 0.95, 1);  
  }
  90% {
  transform: translate3d(0, -4px, 0) scale3d(1, 1.02, 1);  
  }
  100% {
  transform: translate3d(0px, 0px, 0);  
  }
}
      
      :where(.root_reset_1234567890) {
      font-family: var(--mixin-Gu10NrJLTV7X_font-family);
font-size: var(--mixin-Gu10NrJLTV7X_font-size);
font-weight: var(--mixin-Gu10NrJLTV7X_font-weight);
font-style: var(--mixin-Gu10NrJLTV7X_font-style);
color: var(--mixin-Gu10NrJLTV7X_color);
text-align: var(--mixin-Gu10NrJLTV7X_text-align);
text-transform: var(--mixin-Gu10NrJLTV7X_text-transform);
line-height: var(--mixin-Gu10NrJLTV7X_line-height);
letter-spacing: var(--mixin-Gu10NrJLTV7X_letter-spacing);
white-space: var(--mixin-Gu10NrJLTV7X_white-space);  
  }
      
    :where(.root_reset_1234567890) h1:where(.plasmic_default__h1__12345), h1:where(.root_reset_1234567890.plasmic_default__h1__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h1, :where(.root_reset_1234567890_tags) h1, h1:where(.root_reset_1234567890_tags) {
        font-weight: var(--mixin-kNGr7RGBirOX_font-weight);
font-size: var(--mixin-kNGr7RGBirOX_font-size);
line-height: var(--mixin-kNGr7RGBirOX_line-height);
letter-spacing: var(--mixin-kNGr7RGBirOX_letter-spacing);  
    }
  

    :where(.root_reset_1234567890) h2:where(.plasmic_default__h2__12345), h2:where(.root_reset_1234567890.plasmic_default__h2__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h2, :where(.root_reset_1234567890_tags) h2, h2:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-gsONY1VgdHtd_font-size);
font-weight: var(--mixin-gsONY1VgdHtd_font-weight);
letter-spacing: var(--mixin-gsONY1VgdHtd_letter-spacing);
line-height: var(--mixin-gsONY1VgdHtd_line-height);  
    }
  

    :where(.root_reset_1234567890) a:where(.plasmic_default__a__12345), a:where(.root_reset_1234567890.plasmic_default__a__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) a, :where(.root_reset_1234567890_tags) a, a:where(.root_reset_1234567890_tags) {
        color: var(--mixin-RkTSTMvmHEfC_color);  
    }
  

    :where(.root_reset_1234567890) h3:where(.plasmic_default__h3__12345), h3:where(.root_reset_1234567890.plasmic_default__h3__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h3, :where(.root_reset_1234567890_tags) h3, h3:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-VN3kmEgW1Hmx_font-size);
font-weight: var(--mixin-VN3kmEgW1Hmx_font-weight);
line-height: var(--mixin-VN3kmEgW1Hmx_line-height);  
    }
  

    :where(.root_reset_1234567890) h4:where(.plasmic_default__h4__12345), h4:where(.root_reset_1234567890.plasmic_default__h4__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h4, :where(.root_reset_1234567890_tags) h4, h4:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-hStfBTnI-Abp_font-size);
font-weight: var(--mixin-hStfBTnI-Abp_font-weight);
line-height: var(--mixin-hStfBTnI-Abp_line-height);  
    }
  

    :where(.root_reset_1234567890) code:where(.plasmic_default__code__12345), code:where(.root_reset_1234567890.plasmic_default__code__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) code, :where(.root_reset_1234567890_tags) code, code:where(.root_reset_1234567890_tags) {
        background: #f8f8f8;
font-family: var(--mixin-A0Cduqt47XHb_font-family);
border-radius: var(--mixin-A0Cduqt47XHb_border-top-left-radius) var(--mixin-A0Cduqt47XHb_border-top-right-radius) var(--mixin-A0Cduqt47XHb_border-bottom-right-radius) var(--mixin-A0Cduqt47XHb_border-bottom-left-radius);
padding: var(--mixin-A0Cduqt47XHb_padding-top) var(--mixin-A0Cduqt47XHb_padding-right) var(--mixin-A0Cduqt47XHb_padding-bottom) var(--mixin-A0Cduqt47XHb_padding-left);
border-top: var(--mixin-A0Cduqt47XHb_border-top-width) var(--mixin-A0Cduqt47XHb_border-top-style) var(--mixin-A0Cduqt47XHb_border-top-color);
border-right: var(--mixin-A0Cduqt47XHb_border-right-width) var(--mixin-A0Cduqt47XHb_border-right-style) var(--mixin-A0Cduqt47XHb_border-right-color);
border-bottom: var(--mixin-A0Cduqt47XHb_border-bottom-width) var(--mixin-A0Cduqt47XHb_border-bottom-style) var(--mixin-A0Cduqt47XHb_border-bottom-color);
border-left: var(--mixin-A0Cduqt47XHb_border-left-width) var(--mixin-A0Cduqt47XHb_border-left-style) var(--mixin-A0Cduqt47XHb_border-left-color);  
    }
  

    :where(.root_reset_1234567890) blockquote:where(.plasmic_default__blockquote__12345), blockquote:where(.root_reset_1234567890.plasmic_default__blockquote__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) blockquote, :where(.root_reset_1234567890_tags) blockquote, blockquote:where(.root_reset_1234567890_tags) {
        color: var(--mixin-OOm15b_NDUlm_color);
padding-left: var(--mixin-OOm15b_NDUlm_padding-left);
border-left: var(--mixin-OOm15b_NDUlm_border-left-width) var(--mixin-OOm15b_NDUlm_border-left-style) var(--mixin-OOm15b_NDUlm_border-left-color);  
    }
  

    :where(.root_reset_1234567890) pre:where(.plasmic_default__pre__12345), pre:where(.root_reset_1234567890.plasmic_default__pre__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) pre, :where(.root_reset_1234567890_tags) pre, pre:where(.root_reset_1234567890_tags) {
        background: #f8f8f8;
font-family: var(--mixin-BdGd0LDmfoRs_font-family);
border-radius: var(--mixin-BdGd0LDmfoRs_border-top-left-radius) var(--mixin-BdGd0LDmfoRs_border-top-right-radius) var(--mixin-BdGd0LDmfoRs_border-bottom-right-radius) var(--mixin-BdGd0LDmfoRs_border-bottom-left-radius);
padding: var(--mixin-BdGd0LDmfoRs_padding-top) var(--mixin-BdGd0LDmfoRs_padding-right) var(--mixin-BdGd0LDmfoRs_padding-bottom) var(--mixin-BdGd0LDmfoRs_padding-left);
border-top: var(--mixin-BdGd0LDmfoRs_border-top-width) var(--mixin-BdGd0LDmfoRs_border-top-style) var(--mixin-BdGd0LDmfoRs_border-top-color);
border-right: var(--mixin-BdGd0LDmfoRs_border-right-width) var(--mixin-BdGd0LDmfoRs_border-right-style) var(--mixin-BdGd0LDmfoRs_border-right-color);
border-bottom: var(--mixin-BdGd0LDmfoRs_border-bottom-width) var(--mixin-BdGd0LDmfoRs_border-bottom-style) var(--mixin-BdGd0LDmfoRs_border-bottom-color);
border-left: var(--mixin-BdGd0LDmfoRs_border-left-width) var(--mixin-BdGd0LDmfoRs_border-left-style) var(--mixin-BdGd0LDmfoRs_border-left-color);  
    }
  

    :where(.root_reset_1234567890) ul:where(.plasmic_default__ul__12345), ul:where(.root_reset_1234567890.plasmic_default__ul__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) ul, :where(.root_reset_1234567890_tags) ul, ul:where(.root_reset_1234567890_tags) {
        display: var(--mixin-n6mU-ZjsBfMK_display);
flex-direction: var(--mixin-n6mU-ZjsBfMK_flex-direction);
align-items: var(--mixin-n6mU-ZjsBfMK_align-items);
justify-content: var(--mixin-n6mU-ZjsBfMK_justify-content);
list-style-position: var(--mixin-n6mU-ZjsBfMK_list-style-position);
padding-left: var(--mixin-n6mU-ZjsBfMK_padding-left);
position: var(--mixin-n6mU-ZjsBfMK_position);
list-style-type: var(--mixin-n6mU-ZjsBfMK_list-style-type);
column-gap: var(--mixin-n6mU-ZjsBfMK_column-gap);  
    }
  

    :where(.root_reset_1234567890) ol:where(.plasmic_default__ol__12345), ol:where(.root_reset_1234567890.plasmic_default__ol__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) ol, :where(.root_reset_1234567890_tags) ol, ol:where(.root_reset_1234567890_tags) {
        display: var(--mixin-BS38Q2flWmMg_display);
flex-direction: var(--mixin-BS38Q2flWmMg_flex-direction);
align-items: var(--mixin-BS38Q2flWmMg_align-items);
justify-content: var(--mixin-BS38Q2flWmMg_justify-content);
list-style-position: var(--mixin-BS38Q2flWmMg_list-style-position);
padding-left: var(--mixin-BS38Q2flWmMg_padding-left);
position: var(--mixin-BS38Q2flWmMg_position);
list-style-type: var(--mixin-BS38Q2flWmMg_list-style-type);
column-gap: var(--mixin-BS38Q2flWmMg_column-gap);  
    }
  

    :where(.root_reset_1234567890) h5:where(.plasmic_default__h5__12345), h5:where(.root_reset_1234567890.plasmic_default__h5__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h5, :where(.root_reset_1234567890_tags) h5, h5:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-fDS1c4q_H8wY_font-size);
font-weight: var(--mixin-fDS1c4q_H8wY_font-weight);
line-height: var(--mixin-fDS1c4q_H8wY_line-height);  
    }
  

    :where(.root_reset_1234567890) h6:where(.plasmic_default__h6__12345), h6:where(.root_reset_1234567890.plasmic_default__h6__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h6, :where(.root_reset_1234567890_tags) h6, h6:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-x7ipGuQGGI-a_font-size);
font-weight: var(--mixin-x7ipGuQGGI-a_font-weight);
line-height: var(--mixin-x7ipGuQGGI-a_line-height);  
    }
  

    :where(.root_reset_1234567890) a:where(.plasmic_default__a__12345):hover, a:where(.root_reset_1234567890.plasmic_default__a__12345):hover, :where(.root_reset_1234567890 .__wab_expr_html_text) a:hover, :where(.root_reset_1234567890_tags) a:hover, a:where(.root_reset_1234567890_tags):hover {
        color: var(--mixin-sVFbIfzzgDVY_color);  
    }
  

    :where(.root_reset_1234567890) li:where(.plasmic_default__li__12345), li:where(.root_reset_1234567890.plasmic_default__li__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) li, :where(.root_reset_1234567890_tags) li, li:where(.root_reset_1234567890_tags) {
      
    }
  

    :where(.root_reset_1234567890) p:where(.plasmic_default__p__12345), p:where(.root_reset_1234567890.plasmic_default__p__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) p, :where(.root_reset_1234567890_tags) p, p:where(.root_reset_1234567890_tags) {
      
    }
  
    
--- plasmic.tsx ---

    /* eslint-disable */
    /* tslint:disable */
    // @ts-nocheck

    // This code is auto-generated by Plasmic; please do not edit!
    // Plasmic Project: 1234567890
    // plasmic-unformatted
  
    import { createUseGlobalVariants } from "@plasmicapp/react-web";
    
  
    
  export const _useGlobalVariants = createUseGlobalVariants({
    
  });

  
--- plasmic__default_style.css ---

        :where(.plasmic_default__all) {   display: block;
  white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  position: relative;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  text-decoration-line: none;
  margin: 0;
  border-width: 0px; }
        :where(.__wab_expr_html_text *) {   white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  margin: 0;
  border-width: 0px; }
      

      :where(.plasmic_default__img) {   display: inline-block; }
      :where(.__wab_expr_html_text img) {   white-space: inherit; }
    

      :where(.plasmic_default__li) {   display: list-item; }
      :where(.__wab_expr_html_text li) {   white-space: inherit; }
    

      :where(.plasmic_default__span) {   display: inline;
  position: static;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text span) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.plasmic_default__input) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text input) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.plasmic_default__textarea) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text textarea) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.plasmic_default__button) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text button) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
    

      :where(.plasmic_default__code) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text code) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.plasmic_default__pre) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text pre) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.plasmic_default__p) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text p) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.plasmic_default__i) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text i) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.plasmic_default__em) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text em) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.plasmic_default__strong) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text strong) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.plasmic_default__h1) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h1) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__h2) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h2) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__h3) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h3) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__h4) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h4) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__h5) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h5) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__h6) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h6) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.plasmic_default__address) {   font-style: inherit; }
      :where(.__wab_expr_html_text address) {   white-space: inherit;
  font-style: inherit; }
    

      :where(.plasmic_default__a) {   color: inherit; }
      :where(.__wab_expr_html_text a) {   white-space: inherit;
  color: inherit; }
    

      :where(.plasmic_default__ol) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ol) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.plasmic_default__ul) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ul) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.plasmic_default__select) {   padding: 2px 6px; }
      :where(.__wab_expr_html_text select) {   white-space: inherit;
  padding: 2px 6px; }
    
.plasmic_default__component_wrapper { display: grid; }
.plasmic_default__inline { display: inline; }
.plasmic_page_wrapper { display: flex; width: 100%; min-height: 100vh; align-items: stretch; align-self: start;}
.plasmic_page_wrapper > * { height: auto !important; }
.__wab_expr_html_text { white-space: normal; }
--- tsconfig.json ---
{
  "compilerOptions": {
    "target": "ES2015",
    "lib": [
      "dom",
      "dom.iterable",
      "esnext"
    ],
    "jsx": "react",
    "module": "esnext",
    "moduleResolution": "bundler",
    "skipLibCheck": true,
    "allowSyntheticDefaultImports": true,
    "strict": true
  }
}"
`;

exports[`animations: codegen should codegen correct contents - css modules 1`] = `
"
--- Homepage.tsx ---

    // This is a skeleton starter React component generated by Plasmic.
    // This file is owned by you, feel free to edit as you see fit.
    import * as React from "react";
    import {PlasmicHomepage, DefaultHomepageProps} from "./PlasmicHomepage";  // plasmic-import: 9nMSLQ9-J_qp/render
    import {HTMLElementRefOf} from "@plasmicapp/react-web";

    

    

    // Your component props start with props for variants and slots you defined
    // in Plasmic, but you can add more here, like event handlers that you can
    // attach to named nodes in your component.
    //
    // If you don't want to expose certain variants or slots as a prop, you can use
    // Omit to hide them:
    //
    // interface HomepageProps extends Omit<DefaultHomepageProps, "hideProps1"|"hideProp2"> {
    //   // etc.
    // }
    //
    // You can also stop extending from DefaultHomepageProps altogether and have
    // total control over the props for your component.
    export interface HomepageProps extends DefaultHomepageProps {
    }

    
      function Homepage_(props: HomepageProps, ref: HTMLElementRefOf<"div">) {
        
    // Use PlasmicHomepage to render this component as it was
    // designed in Plasmic, by activating the appropriate variants,
    // attaching the appropriate event handlers, etc.  You
    // can also install whatever React hooks you need here to manage state or
    // fetch data.
    //
    // Props you can pass into PlasmicHomepage are:
    // 1. Variants you want to activate,
    // 2. Contents for slots you want to fill,
    // 3. Overrides for any named node in the component to attach behavior and data,
    // 4. Props to set on the root node.
    //
    // By default, we are just piping all HomepageProps here, but feel free
    // to do whatever works for you.
  
        return <PlasmicHomepage root={{ref}} {...props} />;
      }

      const Homepage = React.forwardRef(Homepage_);
      export default Homepage;
    
  
--- PlasmicHomepage.module.css ---
 .root {
          display: grid;
position: relative;
width: 100%;
height: 100%;
align-content: flex-start;
justify-items: center;
min-width: 0;
min-height: 0;
grid-template-columns: var(--plsmc-viewport-gap) 1fr minmax(0, var(--plsmc-wide-chunk)) min(var(--plsmc-standard-width), calc(100% - var(--plsmc-viewport-gap) - var(--plsmc-viewport-gap))) minmax(0, var(--plsmc-wide-chunk)) 1fr var(--plsmc-viewport-gap) ;
padding: 0px;  
      } 
 .root > * {
        grid-column: 4
      } 
 .h1__dplmm {
          animation: var(--anim-ywA_Rc-HaFh2) 1s ease 0s 1 normal none running;
width: 100%;
height: auto;
max-width: 100%;
margin-bottom: 0px;
min-width: 0;  
      } 
 .h1__cidRc {
          animation: var(--anim-K8aS4cD8LxJC) 1s ease 0s 1 normal none running;
width: 100%;
height: auto;
max-width: 100%;
padding-top: 0px;
min-width: 0;  
      } 
--- PlasmicHomepage.tsx ---

/* eslint-disable */
/* tslint:disable */
// @ts-nocheck
/* prettier-ignore-start */

/** @jsxRuntime classic */
/** @jsx createPlasmicElementProxy */
/** @jsxFrag React.Fragment */

// This class is auto-generated by Plasmic; please do not edit!
// Plasmic Project: 1234567890
// Component: 9nMSLQ9-J_qp
// plasmic-unformatted



import * as React from "react";


import {
  Flex as Flex__,
  MultiChoiceArg,
  PlasmicDataSourceContextProvider as PlasmicDataSourceContextProvider__,
  PlasmicIcon as PlasmicIcon__,
  PlasmicImg as PlasmicImg__,
  PlasmicLink as PlasmicLink__,
  PlasmicPageGuard as PlasmicPageGuard__,
  SingleBooleanChoiceArg,
  SingleChoiceArg,
  Stack as Stack__,
  StrictProps,
  Trans as Trans__,
  classNames,
  createPlasmicElementProxy,
  deriveRenderOpts,
  ensureGlobalVariants,
  generateOnMutateForSpec,
  generateStateOnChangeProp,
  generateStateOnChangePropForCodeComponents,
  generateStateValueProp,
  get as $stateGet,
  hasVariant,
  initializeCodeComponentStates,
  initializePlasmicStates,
  makeFragment,
  omit,
  pick,
  renderPlasmicSlot,
  set as $stateSet,
  useCurrentUser,
  useDollarState,
  usePlasmicTranslator,
  useTrigger,
  wrapWithClassName,
  
} from  "@plasmicapp/react-web";
import {
  
  DataCtxReader as DataCtxReader__,
  useDataEnv,
  useGlobalActions,
  
} from "@plasmicapp/react-web/lib/host";










import { _useGlobalVariants } from "./plasmic.tsx"; // plasmic-import: 1234567890/projectModule
import { _useStyleTokens } from "./PlasmicStyleTokensProvider.tsx"; // plasmic-import: 1234567890/styleTokensProvider

    import "@plasmicapp/react-web/lib/plasmic.css";
    
    
    import "./plasmic.css"; // plasmic-import: 1234567890/projectcss
    import sty from "./PlasmicHomepage.module.css" // plasmic-import: 9nMSLQ9-J_qp/css
  





const emptyProxy: any = new Proxy(() => "", {
  get(_, prop) {
    return prop === Symbol.toPrimitive ? () => "" : emptyProxy;
  },
});

function wrapQueriesWithLoadingProxy($q: any): any {
  return new Proxy($q, {
    get(target, queryName) {
      const query = target[queryName];
      return !query || query.isLoading || !query.data ? emptyProxy : query;
    },
  });
}


export type PageCtx = {
  pageRoute: string;
  pagePath: string;
  params: Record<string, string | string[] | undefined>;
  query: Record<string, string | string[] | undefined>;
};

export function generateDynamicMetadata($q: any, $ctx: PageCtx) {
  return {
    
    
    openGraph: {
      
      
      
    },
    twitter: {
      card: "summary" as const,
      
      
      
    },
    
  };
}

createPlasmicElementProxy





    export type PlasmicHomepage__VariantMembers = {
      
    };
    export type PlasmicHomepage__VariantsArgs = {};
    type VariantPropType = keyof PlasmicHomepage__VariantsArgs;
    export const PlasmicHomepage__VariantProps = new Array<VariantPropType>();
  


export type PlasmicHomepage__ArgsType = {};
type ArgPropType = keyof PlasmicHomepage__ArgsType;
export const PlasmicHomepage__ArgProps = new Array<ArgPropType>();


export type PlasmicHomepage__OverridesType = {
    root?: Flex__<"div">;
  };


    export interface DefaultHomepageProps {
      
      className?: string;
  }





const $$ = {};










    function PlasmicHomepage__RenderFunc(
      props: {
        variants: PlasmicHomepage__VariantsArgs,
        args: PlasmicHomepage__ArgsType,
        overrides: PlasmicHomepage__OverridesType,
        forNode?: string
      }
    ) {
      
      
      const {variants, overrides, forNode } = props;

      

      const args = React.useMemo(() => Object.assign({
    
  }, Object.fromEntries(
          Object.entries(props.args).filter(([_, v]) => v !== undefined)
        )),
        [props.args]
      );

      
    const $props = {
      ...args,
      ...variants,
    };

    
    
    const $ctx = useDataEnv?.() || {};
    const refsRef = React.useRef({});
    const $refs = refsRef.current;

    

    

    

    

    
    
    
    

    

    
    

    
    const styleTokensClassNames = _useStyleTokens();
    
  
      return (
        <React.Fragment>
  

      <div className={"plasmic_page_wrapper"}>
        <div
      data-plasmic-name={"root"}
      data-plasmic-override={overrides.root}
      data-plasmic-root={true}
      data-plasmic-for-node={forNode}
      className={classNames("all", "root_reset_1234567890", "plasmic_default_styles", "plasmic_mixins", styleTokensClassNames, sty.root)}
      
      >
            <h1
      
      
      
      
      className={classNames("all", "h1", "h1__12345", "__wab_text", sty.h1__dplmm)}
      
      >
            { "This project animation" }
          </h1>
<h1
      
      
      
      
      className={classNames("all", "h1", "h1__12345", "__wab_text", sty.h1__cidRc)}
      
      >
            { "Imported project animation" }
          </h1>
          </div>
      </div>
    
</React.Fragment>
      ) as React.ReactElement | null;
    }




    const PlasmicDescendants = {
    root: ["root"],
  } as const;
    type NodeNameType = keyof typeof PlasmicDescendants;
    type DescendantsType<T extends NodeNameType> = (typeof PlasmicDescendants)[T][number];
    type NodeDefaultElementType = {
      root: "div"
    };
  


    type ReservedPropsType = "variants" | "args" | "overrides";
    type NodeOverridesType<T extends NodeNameType> = Pick<PlasmicHomepage__OverridesType, DescendantsType<T>>;
    type NodeComponentProps<T extends NodeNameType> = (
      // Explicitly specify variants, args, and overrides as objects
      & {
        variants?: PlasmicHomepage__VariantsArgs;
        args?: PlasmicHomepage__ArgsType;
        overrides?: NodeOverridesType<T>;
      }
      // Specify variants directly as props
      & Omit<PlasmicHomepage__VariantsArgs, ReservedPropsType>
      // Specify args directly as props
      & Omit<PlasmicHomepage__ArgsType, ReservedPropsType>
      // Specify overrides for each element directly as props
      & Omit<NodeOverridesType<T>, ReservedPropsType | VariantPropType | ArgPropType>
      // Specify props for the root element
      & Omit<Partial<React.ComponentProps<NodeDefaultElementType[T]>>, ReservedPropsType | VariantPropType | ArgPropType | DescendantsType<T>>
    );
    function makeNodeComponent<NodeName extends NodeNameType>(nodeName: NodeName) {
      type PropsType = NodeComponentProps<NodeName> & {key?: React.Key};
      const func = function<T extends PropsType>(props: T & StrictProps<T, PropsType>) {
        const {variants, args, overrides} = React.useMemo(() => deriveRenderOpts(props, {
          name: nodeName,
          descendantNames: PlasmicDescendants[nodeName],
          internalArgPropNames: PlasmicHomepage__ArgProps,
          internalVariantPropNames: PlasmicHomepage__VariantProps,
        }), [props, nodeName]);
        return PlasmicHomepage__RenderFunc({ variants, args, overrides, forNode: nodeName });
      };
      if (nodeName === "root") {
        func.displayName = "PlasmicHomepage";
      } else {
        func.displayName = \`PlasmicHomepage.\${nodeName}\`;
      }
      return func;
    }

    
    

    export const PlasmicHomepage = Object.assign(
      // Top-level PlasmicHomepage renders the root element
      makeNodeComponent("root"),
      {
        // Helper components rendering sub-elements
        

        // Metadata about props expected for PlasmicHomepage
        internalVariantProps: PlasmicHomepage__VariantProps,
        internalArgProps: PlasmicHomepage__ArgProps,

        

        

        

        
    pageMetadata: generateDynamicMetadata(
      wrapQueriesWithLoadingProxy({}),
      { pageRoute: "/", pagePath: "/", params: {}, query: {} }
    )
  
      }
    );
  



export default PlasmicHomepage;
/* prettier-ignore-end */

--- PlasmicStyleTokensProvider.tsx ---

    /* eslint-disable */
    /* tslint:disable */
    // @ts-nocheck

    // This code is auto-generated by Plasmic; please do not edit!
    // Plasmic Project: 1234567890
    // plasmic-unformatted
  
    import { createUseStyleTokens } from "@plasmicapp/react-web";

    import { _useGlobalVariants } from "./plasmic.tsx"; // plasmic-import: 1234567890/projectModule

    import "./plasmic.css"; // plasmic-import: 1234567890/projectcss

    const data = {
    base: \`\${"plasmic_tokens_1234567890"}\`,
    varianted: [
    
  ],
  };
  
    export const _useStyleTokens = createUseStyleTokens(
      data,
      _useGlobalVariants,
    );
  
    
--- global.d.ts ---
declare module '*.css' {
  const classes: { readonly [key: string]: string }
  export default classes
}
declare module '*.module.css' {
  const classes: { readonly [key: string]: string }
  export default classes
}
--- plasmic.css ---

      @import "../plasmic_kit_animations/plasmic.css"; /* plasmic-import: axVArpcqgHCPMKB2yUGsW3/projectcss */
      @import url('https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&display=swap');
      
      
      
  .plasmic_tokens_1234567890 {
    --plsmc-standard-width: 800px;
    --plsmc-wide-width: 1280px;
    --plsmc-viewport-gap: 16px;
    --plsmc-wide-chunk: calc(((var(--plsmc-wide-width) - var(--plsmc-standard-width)) / 2) - var(--plsmc-viewport-gap));
  }
    
      
        
        .plasmic_default_styles {
          --mixin-Gu10NrJLTV7X_font-family: "Inter", sans-serif; --mixin-Gu10NrJLTV7X_font-size: 16px; --mixin-Gu10NrJLTV7X_font-weight: 400; --mixin-Gu10NrJLTV7X_font-style: normal; --mixin-Gu10NrJLTV7X_text-align: left; --mixin-Gu10NrJLTV7X_text-transform: none; --mixin-Gu10NrJLTV7X_line-height: 1.5; --mixin-Gu10NrJLTV7X_letter-spacing: normal; --mixin-Gu10NrJLTV7X_white-space: pre-wrap; --mixin-Gu10NrJLTV7X_user-select: text; --mixin-Gu10NrJLTV7X_text-decoration-line: none; --mixin-Gu10NrJLTV7X_text-overflow: clip; --mixin-Gu10NrJLTV7X_color: #000000; --mixin-kNGr7RGBirOX_font-weight: 700; --mixin-kNGr7RGBirOX_font-size: 64px; --mixin-kNGr7RGBirOX_line-height: 1; --mixin-kNGr7RGBirOX_letter-spacing: -1px; --mixin-kNGr7RGBirOX_white-space: pre-wrap; --mixin-gsONY1VgdHtd_font-size: 48px; --mixin-gsONY1VgdHtd_font-weight: 700; --mixin-gsONY1VgdHtd_letter-spacing: -0.5px; --mixin-gsONY1VgdHtd_line-height: 1.1; --mixin-gsONY1VgdHtd_white-space: pre-wrap; --mixin-RkTSTMvmHEfC_color: #0070f3; --mixin-RkTSTMvmHEfC_white-space: pre-wrap; --mixin-VN3kmEgW1Hmx_font-size: 32px; --mixin-VN3kmEgW1Hmx_font-weight: 600; --mixin-VN3kmEgW1Hmx_line-height: 1.2; --mixin-VN3kmEgW1Hmx_white-space: pre-wrap; --mixin-hStfBTnI-Abp_font-size: 24px; --mixin-hStfBTnI-Abp_font-weight: 600; --mixin-hStfBTnI-Abp_line-height: 1.3; --mixin-hStfBTnI-Abp_white-space: pre-wrap; --mixin-A0Cduqt47XHb_background: linear-gradient(#f8f8f8, #f8f8f8); --mixin-A0Cduqt47XHb_border-bottom-color: #dddddd; --mixin-A0Cduqt47XHb_border-bottom-style: solid; --mixin-A0Cduqt47XHb_border-bottom-width: 1px; --mixin-A0Cduqt47XHb_border-left-color: #dddddd; --mixin-A0Cduqt47XHb_border-left-style: solid; --mixin-A0Cduqt47XHb_border-left-width: 1px; --mixin-A0Cduqt47XHb_border-right-color: #dddddd; --mixin-A0Cduqt47XHb_border-right-style: solid; --mixin-A0Cduqt47XHb_border-right-width: 1px; --mixin-A0Cduqt47XHb_border-top-color: #dddddd; --mixin-A0Cduqt47XHb_border-top-style: solid; --mixin-A0Cduqt47XHb_border-top-width: 1px; --mixin-A0Cduqt47XHb_border-bottom-left-radius: 3px; --mixin-A0Cduqt47XHb_border-bottom-right-radius: 3px; --mixin-A0Cduqt47XHb_border-top-left-radius: 3px; --mixin-A0Cduqt47XHb_border-top-right-radius: 3px; --mixin-A0Cduqt47XHb_font-family: "Inconsolata"; --mixin-A0Cduqt47XHb_padding-bottom: 1px; --mixin-A0Cduqt47XHb_padding-left: 4px; --mixin-A0Cduqt47XHb_padding-right: 4px; --mixin-A0Cduqt47XHb_padding-top: 1px; --mixin-A0Cduqt47XHb_white-space: pre-wrap; --mixin-OOm15b_NDUlm_border-left-color: #dddddd; --mixin-OOm15b_NDUlm_border-left-style: solid; --mixin-OOm15b_NDUlm_border-left-width: 3px; --mixin-OOm15b_NDUlm_color: #888888; --mixin-OOm15b_NDUlm_padding-left: 10px; --mixin-OOm15b_NDUlm_white-space: pre-wrap; --mixin-BdGd0LDmfoRs_background: linear-gradient(#f8f8f8, #f8f8f8); --mixin-BdGd0LDmfoRs_border-bottom-color: #dddddd; --mixin-BdGd0LDmfoRs_border-bottom-style: solid; --mixin-BdGd0LDmfoRs_border-bottom-width: 1px; --mixin-BdGd0LDmfoRs_border-left-color: #dddddd; --mixin-BdGd0LDmfoRs_border-left-style: solid; --mixin-BdGd0LDmfoRs_border-left-width: 1px; --mixin-BdGd0LDmfoRs_border-right-color: #dddddd; --mixin-BdGd0LDmfoRs_border-right-style: solid; --mixin-BdGd0LDmfoRs_border-right-width: 1px; --mixin-BdGd0LDmfoRs_border-top-color: #dddddd; --mixin-BdGd0LDmfoRs_border-top-style: solid; --mixin-BdGd0LDmfoRs_border-top-width: 1px; --mixin-BdGd0LDmfoRs_border-bottom-left-radius: 3px; --mixin-BdGd0LDmfoRs_border-bottom-right-radius: 3px; --mixin-BdGd0LDmfoRs_border-top-left-radius: 3px; --mixin-BdGd0LDmfoRs_border-top-right-radius: 3px; --mixin-BdGd0LDmfoRs_font-family: "Inconsolata"; --mixin-BdGd0LDmfoRs_padding-bottom: 3px; --mixin-BdGd0LDmfoRs_padding-left: 6px; --mixin-BdGd0LDmfoRs_padding-right: 6px; --mixin-BdGd0LDmfoRs_padding-top: 3px; --mixin-BdGd0LDmfoRs_white-space: pre-wrap; --mixin-n6mU-ZjsBfMK_display: flex; --mixin-n6mU-ZjsBfMK_flex-direction: column; --mixin-n6mU-ZjsBfMK_align-items: stretch; --mixin-n6mU-ZjsBfMK_justify-content: flex-start; --mixin-n6mU-ZjsBfMK_list-style-position: outside; --mixin-n6mU-ZjsBfMK_padding-left: 40px; --mixin-n6mU-ZjsBfMK_position: relative; --mixin-n6mU-ZjsBfMK_list-style-type: disc; --mixin-n6mU-ZjsBfMK_white-space: pre-wrap; --mixin-BS38Q2flWmMg_display: flex; --mixin-BS38Q2flWmMg_flex-direction: column; --mixin-BS38Q2flWmMg_align-items: stretch; --mixin-BS38Q2flWmMg_justify-content: flex-start; --mixin-BS38Q2flWmMg_list-style-position: outside; --mixin-BS38Q2flWmMg_padding-left: 40px; --mixin-BS38Q2flWmMg_position: relative; --mixin-BS38Q2flWmMg_list-style-type: decimal; --mixin-BS38Q2flWmMg_white-space: pre-wrap; --mixin-fDS1c4q_H8wY_font-size: 20px; --mixin-fDS1c4q_H8wY_font-weight: 600; --mixin-fDS1c4q_H8wY_line-height: 1.5; --mixin-fDS1c4q_H8wY_white-space: pre-wrap; --mixin-x7ipGuQGGI-a_font-size: 16px; --mixin-x7ipGuQGGI-a_font-weight: 600; --mixin-x7ipGuQGGI-a_line-height: 1.5; --mixin-x7ipGuQGGI-a_white-space: pre-wrap; --mixin-sVFbIfzzgDVY_color: #3291ff; --mixin-sVFbIfzzgDVY_white-space: pre-wrap; --mixin-mqSsrWeDcbM__white-space: pre-wrap; --mixin-LfWUg1b7ppIg_white-space: pre-wrap
        }
        
      
      .plasmic_default_styles {
--anim-ywA_Rc-HaFh2: bounce-ywA_Rc-HaFh2;
--plasmic-anim-bounce: var(--anim-ywA_Rc-HaFh2);
}
      @keyframes bounce-ywA_Rc-HaFh2 {
  0% {
  transform: translate3d(0px, 0px, 0);  
  }
  20% {
  transform: translate3d(0px, 0px, 0);  
  }
  40% {
  transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
  }
  43% {
  transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
  }
  53% {
  transform: translate3d(0px, 0px, 0);  
  }
  70% {
  transform: translate3d(0, -15px, 0) scale3d(1, 1.05, 1);  
  }
  80% {
  transform: translate3d(0px, 0px, 0) scale3d(1, 0.95, 1);  
  }
  90% {
  transform: translate3d(0, -4px, 0) scale3d(1, 1.02, 1);  
  }
  100% {
  transform: translate3d(0px, 0px, 0);  
  }
}
      
        :where(.all) {   display: block;
  white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  position: relative;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  text-decoration-line: none;
  margin: 0;
  border-width: 0px; }
        :where(.__wab_expr_html_text *) {   white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  margin: 0;
  border-width: 0px; }
      

      :where(.img) {   display: inline-block; }
      :where(.__wab_expr_html_text img) {   white-space: inherit; }
    

      :where(.li) {   display: list-item; }
      :where(.__wab_expr_html_text li) {   white-space: inherit; }
    

      :where(.span) {   display: inline;
  position: static;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text span) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.input) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text input) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.textarea) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text textarea) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.button) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text button) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
    

      :where(.code) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text code) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.pre) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text pre) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.p) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text p) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.i) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text i) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.em) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text em) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.strong) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text strong) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.h1) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h1) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h2) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h2) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h3) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h3) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h4) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h4) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h5) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h5) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h6) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h6) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.address) {   font-style: inherit; }
      :where(.__wab_expr_html_text address) {   white-space: inherit;
  font-style: inherit; }
    

      :where(.a) {   color: inherit; }
      :where(.__wab_expr_html_text a) {   white-space: inherit;
  color: inherit; }
    

      :where(.ol) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ol) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.ul) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ul) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.select) {   padding: 2px 6px; }
      :where(.__wab_expr_html_text select) {   white-space: inherit;
  padding: 2px 6px; }
    
.plasmic_default__component_wrapper { display: grid; }
.plasmic_default__inline { display: inline; }
.plasmic_page_wrapper { display: flex; width: 100%; min-height: 100vh; align-items: stretch; align-self: start;}
.plasmic_page_wrapper > * { height: auto !important; }
.__wab_expr_html_text { white-space: normal; }
      :where(.root_reset_1234567890) {
      font-family: var(--mixin-Gu10NrJLTV7X_font-family);
font-size: var(--mixin-Gu10NrJLTV7X_font-size);
font-weight: var(--mixin-Gu10NrJLTV7X_font-weight);
font-style: var(--mixin-Gu10NrJLTV7X_font-style);
color: var(--mixin-Gu10NrJLTV7X_color);
text-align: var(--mixin-Gu10NrJLTV7X_text-align);
text-transform: var(--mixin-Gu10NrJLTV7X_text-transform);
line-height: var(--mixin-Gu10NrJLTV7X_line-height);
letter-spacing: var(--mixin-Gu10NrJLTV7X_letter-spacing);
white-space: var(--mixin-Gu10NrJLTV7X_white-space);  
  }
      
    :where(.root_reset_1234567890) h1:where(.h1__12345), h1:where(.root_reset_1234567890.h1__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h1, :where(.root_reset_1234567890_tags) h1, h1:where(.root_reset_1234567890_tags) {
        font-weight: var(--mixin-kNGr7RGBirOX_font-weight);
font-size: var(--mixin-kNGr7RGBirOX_font-size);
line-height: var(--mixin-kNGr7RGBirOX_line-height);
letter-spacing: var(--mixin-kNGr7RGBirOX_letter-spacing);  
    }
  

    :where(.root_reset_1234567890) h2:where(.h2__12345), h2:where(.root_reset_1234567890.h2__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h2, :where(.root_reset_1234567890_tags) h2, h2:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-gsONY1VgdHtd_font-size);
font-weight: var(--mixin-gsONY1VgdHtd_font-weight);
letter-spacing: var(--mixin-gsONY1VgdHtd_letter-spacing);
line-height: var(--mixin-gsONY1VgdHtd_line-height);  
    }
  

    :where(.root_reset_1234567890) a:where(.a__12345), a:where(.root_reset_1234567890.a__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) a, :where(.root_reset_1234567890_tags) a, a:where(.root_reset_1234567890_tags) {
        color: var(--mixin-RkTSTMvmHEfC_color);  
    }
  

    :where(.root_reset_1234567890) h3:where(.h3__12345), h3:where(.root_reset_1234567890.h3__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h3, :where(.root_reset_1234567890_tags) h3, h3:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-VN3kmEgW1Hmx_font-size);
font-weight: var(--mixin-VN3kmEgW1Hmx_font-weight);
line-height: var(--mixin-VN3kmEgW1Hmx_line-height);  
    }
  

    :where(.root_reset_1234567890) h4:where(.h4__12345), h4:where(.root_reset_1234567890.h4__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h4, :where(.root_reset_1234567890_tags) h4, h4:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-hStfBTnI-Abp_font-size);
font-weight: var(--mixin-hStfBTnI-Abp_font-weight);
line-height: var(--mixin-hStfBTnI-Abp_line-height);  
    }
  

    :where(.root_reset_1234567890) code:where(.code__12345), code:where(.root_reset_1234567890.code__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) code, :where(.root_reset_1234567890_tags) code, code:where(.root_reset_1234567890_tags) {
        background: #f8f8f8;
font-family: var(--mixin-A0Cduqt47XHb_font-family);
border-radius: var(--mixin-A0Cduqt47XHb_border-top-left-radius) var(--mixin-A0Cduqt47XHb_border-top-right-radius) var(--mixin-A0Cduqt47XHb_border-bottom-right-radius) var(--mixin-A0Cduqt47XHb_border-bottom-left-radius);
padding: var(--mixin-A0Cduqt47XHb_padding-top) var(--mixin-A0Cduqt47XHb_padding-right) var(--mixin-A0Cduqt47XHb_padding-bottom) var(--mixin-A0Cduqt47XHb_padding-left);
border-top: var(--mixin-A0Cduqt47XHb_border-top-width) var(--mixin-A0Cduqt47XHb_border-top-style) var(--mixin-A0Cduqt47XHb_border-top-color);
border-right: var(--mixin-A0Cduqt47XHb_border-right-width) var(--mixin-A0Cduqt47XHb_border-right-style) var(--mixin-A0Cduqt47XHb_border-right-color);
border-bottom: var(--mixin-A0Cduqt47XHb_border-bottom-width) var(--mixin-A0Cduqt47XHb_border-bottom-style) var(--mixin-A0Cduqt47XHb_border-bottom-color);
border-left: var(--mixin-A0Cduqt47XHb_border-left-width) var(--mixin-A0Cduqt47XHb_border-left-style) var(--mixin-A0Cduqt47XHb_border-left-color);  
    }
  

    :where(.root_reset_1234567890) blockquote:where(.blockquote__12345), blockquote:where(.root_reset_1234567890.blockquote__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) blockquote, :where(.root_reset_1234567890_tags) blockquote, blockquote:where(.root_reset_1234567890_tags) {
        color: var(--mixin-OOm15b_NDUlm_color);
padding-left: var(--mixin-OOm15b_NDUlm_padding-left);
border-left: var(--mixin-OOm15b_NDUlm_border-left-width) var(--mixin-OOm15b_NDUlm_border-left-style) var(--mixin-OOm15b_NDUlm_border-left-color);  
    }
  

    :where(.root_reset_1234567890) pre:where(.pre__12345), pre:where(.root_reset_1234567890.pre__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) pre, :where(.root_reset_1234567890_tags) pre, pre:where(.root_reset_1234567890_tags) {
        background: #f8f8f8;
font-family: var(--mixin-BdGd0LDmfoRs_font-family);
border-radius: var(--mixin-BdGd0LDmfoRs_border-top-left-radius) var(--mixin-BdGd0LDmfoRs_border-top-right-radius) var(--mixin-BdGd0LDmfoRs_border-bottom-right-radius) var(--mixin-BdGd0LDmfoRs_border-bottom-left-radius);
padding: var(--mixin-BdGd0LDmfoRs_padding-top) var(--mixin-BdGd0LDmfoRs_padding-right) var(--mixin-BdGd0LDmfoRs_padding-bottom) var(--mixin-BdGd0LDmfoRs_padding-left);
border-top: var(--mixin-BdGd0LDmfoRs_border-top-width) var(--mixin-BdGd0LDmfoRs_border-top-style) var(--mixin-BdGd0LDmfoRs_border-top-color);
border-right: var(--mixin-BdGd0LDmfoRs_border-right-width) var(--mixin-BdGd0LDmfoRs_border-right-style) var(--mixin-BdGd0LDmfoRs_border-right-color);
border-bottom: var(--mixin-BdGd0LDmfoRs_border-bottom-width) var(--mixin-BdGd0LDmfoRs_border-bottom-style) var(--mixin-BdGd0LDmfoRs_border-bottom-color);
border-left: var(--mixin-BdGd0LDmfoRs_border-left-width) var(--mixin-BdGd0LDmfoRs_border-left-style) var(--mixin-BdGd0LDmfoRs_border-left-color);  
    }
  

    :where(.root_reset_1234567890) ul:where(.ul__12345), ul:where(.root_reset_1234567890.ul__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) ul, :where(.root_reset_1234567890_tags) ul, ul:where(.root_reset_1234567890_tags) {
        display: var(--mixin-n6mU-ZjsBfMK_display);
flex-direction: var(--mixin-n6mU-ZjsBfMK_flex-direction);
align-items: var(--mixin-n6mU-ZjsBfMK_align-items);
justify-content: var(--mixin-n6mU-ZjsBfMK_justify-content);
list-style-position: var(--mixin-n6mU-ZjsBfMK_list-style-position);
padding-left: var(--mixin-n6mU-ZjsBfMK_padding-left);
position: var(--mixin-n6mU-ZjsBfMK_position);
list-style-type: var(--mixin-n6mU-ZjsBfMK_list-style-type);
column-gap: var(--mixin-n6mU-ZjsBfMK_column-gap);  
    }
  

    :where(.root_reset_1234567890) ol:where(.ol__12345), ol:where(.root_reset_1234567890.ol__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) ol, :where(.root_reset_1234567890_tags) ol, ol:where(.root_reset_1234567890_tags) {
        display: var(--mixin-BS38Q2flWmMg_display);
flex-direction: var(--mixin-BS38Q2flWmMg_flex-direction);
align-items: var(--mixin-BS38Q2flWmMg_align-items);
justify-content: var(--mixin-BS38Q2flWmMg_justify-content);
list-style-position: var(--mixin-BS38Q2flWmMg_list-style-position);
padding-left: var(--mixin-BS38Q2flWmMg_padding-left);
position: var(--mixin-BS38Q2flWmMg_position);
list-style-type: var(--mixin-BS38Q2flWmMg_list-style-type);
column-gap: var(--mixin-BS38Q2flWmMg_column-gap);  
    }
  

    :where(.root_reset_1234567890) h5:where(.h5__12345), h5:where(.root_reset_1234567890.h5__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h5, :where(.root_reset_1234567890_tags) h5, h5:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-fDS1c4q_H8wY_font-size);
font-weight: var(--mixin-fDS1c4q_H8wY_font-weight);
line-height: var(--mixin-fDS1c4q_H8wY_line-height);  
    }
  

    :where(.root_reset_1234567890) h6:where(.h6__12345), h6:where(.root_reset_1234567890.h6__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) h6, :where(.root_reset_1234567890_tags) h6, h6:where(.root_reset_1234567890_tags) {
        font-size: var(--mixin-x7ipGuQGGI-a_font-size);
font-weight: var(--mixin-x7ipGuQGGI-a_font-weight);
line-height: var(--mixin-x7ipGuQGGI-a_line-height);  
    }
  

    :where(.root_reset_1234567890) a:where(.a__12345):hover, a:where(.root_reset_1234567890.a__12345):hover, :where(.root_reset_1234567890 .__wab_expr_html_text) a:hover, :where(.root_reset_1234567890_tags) a:hover, a:where(.root_reset_1234567890_tags):hover {
        color: var(--mixin-sVFbIfzzgDVY_color);  
    }
  

    :where(.root_reset_1234567890) li:where(.li__12345), li:where(.root_reset_1234567890.li__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) li, :where(.root_reset_1234567890_tags) li, li:where(.root_reset_1234567890_tags) {
      
    }
  

    :where(.root_reset_1234567890) p:where(.p__12345), p:where(.root_reset_1234567890.p__12345), :where(.root_reset_1234567890 .__wab_expr_html_text) p, :where(.root_reset_1234567890_tags) p, p:where(.root_reset_1234567890_tags) {
      
    }
  
    
--- plasmic.tsx ---

    /* eslint-disable */
    /* tslint:disable */
    // @ts-nocheck

    // This code is auto-generated by Plasmic; please do not edit!
    // Plasmic Project: 1234567890
    // plasmic-unformatted
  
    import { createUseGlobalVariants } from "@plasmicapp/react-web";
    
  
    
  export const _useGlobalVariants = createUseGlobalVariants({
    
  });

  
--- plasmic__default_style.css ---

        :where(.all) {   display: block;
  white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  position: relative;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  text-decoration-line: none;
  margin: 0;
  border-width: 0px; }
        :where(.__wab_expr_html_text *) {   white-space: inherit;
  grid-row: auto;
  grid-column: auto;
  background: none;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  row-gap: 0px;
  column-gap: 0px;
  box-shadow: none;
  box-sizing: border-box;
  margin: 0;
  border-width: 0px; }
      

      :where(.img) {   display: inline-block; }
      :where(.__wab_expr_html_text img) {   white-space: inherit; }
    

      :where(.li) {   display: list-item; }
      :where(.__wab_expr_html_text li) {   white-space: inherit; }
    

      :where(.span) {   display: inline;
  position: static;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text span) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.input) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text input) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: linear-gradient(#ffffff, #ffffff);
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.textarea) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text textarea) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  padding: 2px;
  border: 1px solid lightgray; }
    

      :where(.button) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
      :where(.__wab_expr_html_text button) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit;
  background-image: none;
  align-items: flex-start;
  text-align: center;
  padding: 2px 6px;
  border: 1px solid lightgray; }
    

      :where(.code) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text code) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.pre) {   font-family: inherit;
  line-height: inherit; }
      :where(.__wab_expr_html_text pre) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit; }
    

      :where(.p) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text p) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.i) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text i) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.em) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text em) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.strong) {   font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
      :where(.__wab_expr_html_text strong) {   white-space: inherit;
  font-family: inherit;
  line-height: inherit;
  font-size: inherit;
  color: inherit;
  text-transform: inherit; }
    

      :where(.h1) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h1) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h2) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h2) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h3) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h3) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h4) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h4) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h5) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h5) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.h6) {   font-size: inherit;
  font-weight: inherit; }
      :where(.__wab_expr_html_text h6) {   white-space: inherit;
  font-size: inherit;
  font-weight: inherit; }
    

      :where(.address) {   font-style: inherit; }
      :where(.__wab_expr_html_text address) {   white-space: inherit;
  font-style: inherit; }
    

      :where(.a) {   color: inherit; }
      :where(.__wab_expr_html_text a) {   white-space: inherit;
  color: inherit; }
    

      :where(.ol) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ol) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.ul) {   list-style-type: none;
  padding: 0; }
      :where(.__wab_expr_html_text ul) {   white-space: inherit;
  list-style-type: none;
  padding: 0; }
    

      :where(.select) {   padding: 2px 6px; }
      :where(.__wab_expr_html_text select) {   white-space: inherit;
  padding: 2px 6px; }
    
.plasmic_default__component_wrapper { display: grid; }
.plasmic_default__inline { display: inline; }
.plasmic_page_wrapper { display: flex; width: 100%; min-height: 100vh; align-items: stretch; align-self: start;}
.plasmic_page_wrapper > * { height: auto !important; }
.__wab_expr_html_text { white-space: normal; }
--- tsconfig.json ---
{
  "compilerOptions": {
    "target": "ES2015",
    "lib": [
      "dom",
      "dom.iterable",
      "esnext"
    ],
    "jsx": "react",
    "module": "esnext",
    "moduleResolution": "bundler",
    "skipLibCheck": true,
    "allowSyntheticDefaultImports": true,
    "strict": true
  }
}"
`;
